--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "scripts": {
     "build": "npm run lint && npm run build-src && npm run build-demos",
     "build-src": "babel ./src --out-dir ./lib",
-    "build-demos": "NODE_ENV=production webpack -p --config webpack.demos.config.js",
-    "run-demos": "NODE_ENV=development webpack-dev-server --config webpack.demos.config.js --content-base demos/ --progress --colors",
+    "build-demos": "cross-env NODE_ENV=production webpack -p --config webpack.demos.config.js",
+    "run-demos": "cross-env NODE_ENV=development webpack-dev-server --config webpack.demos.config.js --content-base demos/ --progress --colors",
     "lint": "eslint --ext .jsx ./src ./demos",
     "prepublish": "npm run build",
     "start": "npm run run-demos"
@@ -48,6 +48,7 @@
     "babel-preset-es2015": "6.18.0",
     "babel-preset-react": "6.16.0",
     "babel-preset-stage-0": "6.16.0",
+    "cross-env": "^5.0.5",
     "eslint": "2.13.1",
     "eslint-config-airbnb": "7.0.0",
     "eslint-loader": "1.6.3",
@@ -70,5 +71,6 @@
   },
   "peerDependencies": {
     "react": "0.13.x || 0.14.x || 15.x.x"
-  }
+  },
+  "false": {}
 }
